# guift

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.cpp
cmake/: avr.cmake
demo/calibration/: calibration.ino
demo/colors/: colors.ino
demo/rotating-paint/: rotating-paint.ino
demo/rotating-paint-free/: rotating-paint-free.ino
demo/rotating-paint-rect/: rotating-paint-rect.ino
demo/text/: text.ino
demo/text-decor/: text-decor.ino
src/: Common.hpp  Display.cpp  Display.hpp  Geometry.hpp  Touchscreen.cpp  Touchscreen.hpp  asdf.cpp  main.cpp
src/ui/: BaseElement.hpp  Box.hpp  Button.hpp  Text.cpp  Text.hpp
